Light Mode/Dark Mode Fix

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
     padding: 25px;
     background-color: white;
-    color: black;
+    color: rgb(58, 56, 56);
     font-size: 25px;
   }
   
